[B]2.3.2[/B]
. Fix thumb and fanart link creation for categories, launchers and items.

[B]2.3.1[/B]
. Fix GameFAQs thumbs and fanarts scrapers.

[B]2.3.0[/B]
. Add a queries launcher creation.
. Fix message display for launchers fanart image change.
. Fix message display for items fanart image change.

[B]2.2.8[/B]
. Fix "Remote Share" Could not connect to network server message display under Windows.

[B]2.2.7[/B]
. Fix ComicVine data scrapers.

[B]2.2.6[/B]
. Fix platform ID change for GameFAQs scrapers.

[B]2.2.5[/B]
. Fix launcher information display

[B]2.2.4[/B]
. Fix Minimize option save.

[B]2.2.3[/B]
. Fix Sega Genesis 32X scrapers references

[B]2.2.2[/B]
. Fix unclosed opened CSV and NFO files.
. Fix negative handle problem.
. Fix TheGameDB cached thumbs images display list.

[B]2.2.1[/B]
. Fix XBMC notification display bugs.

[B]2.2.0[/B]
. Fix XBMC notification icon display.
. Rewrite launchers.xml load/save functions.
. Code cleaning.
. Change python dependence to version 2.1.

[B]2.1.0[/B]
. Add an option to directly open Advanced Launcher into default category.
. Update launchers.xml file format.
. Update french translation.

[B]2.0.15[/B]
. Update German translation (thanks to mbroemme).

[B]2.0.14[/B]
. Fix GameFAQs scrapers (gamesystem list update).
. Remove MobyGames scraper (until it will work correctly).

[B]2.0.13[/B]
. Fix TheGameDB scrapers (info, thumbs and fanarts).

[B]2.0.12[/B]
. Fix images download bug into automatic scan mode.
. Improve download image algorithm.

[B]2.0.11[/B]
. Fix TheGameDB scrapers (info, thumbs and fanarts).
. Change download image runtime.

[B]2.0.10[/B]
. Fix GameFAQs scrapers (info, thumbs and fanarts).
. Fix post-Frodo XBMC versions compatibility.
. Fix toogle fullscreen option for files launchers.

[B]2.0.9[/B]
. Restore post-Frodo XBMC versions compatibility.

[B]2.0.8[/B]
. Fix non-existing category bug.
. Add empty launcher display message.
. Add file/directory path not exist error messages.
