@@ -76,6 +76,7 @@
     <string id="30112">New Category Name</string>
     <string id="30113">Category %s created</string>
     <string id="30114">Select the category</string>
+    <string id="30115">Select the favourite</string>
     
     <string id="30120">Import Mode</string>
     <string id="30121">Source</string>
